deconstructed object is now backed by a map instead of a list